# NeuralNetworks

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  neuralnetworks-config.cmake
ANN_Network/: CMakeLists.txt
ANN_Network/src/: StartNetwork.cpp
CNN_Network/: CMakeLists.txt
CNN_Network/src/: StartCNNNetwork.cpp
DeepNetwork/: CMakeLists.txt
DeepNetwork/resources/: Tests.txt  Weights.txt
DeepNetwork/src/: StartNetwork.cpp
DeepNetwork_sigm_sigm/: CMakeLists.txt
DeepNetwork_sigm_sigm/resources/: TeachChoose.txt  Tests.txt
DeepNetwork_sigm_sigm/src/: StartNetwork.cpp
Examples/CNN_Network/: CMakeLists.txt
Examples/CNN_Network/src/: StartCNNNetwork.cpp
Examples/DFF_Network/: CMakeLists.txt
Examples/DFF_Network/src/: StartDFFNetwork.cpp
Examples/FF_Network/: CMakeLists.txt
Examples/FF_Network/src/: StartFFNetwork.cpp
Examples/Hopfield_Network/: CMakeLists.txt
Examples/Hopfield_Network/resources/: test_nums.csv  training_nums.csv
Examples/Hopfield_Network/src/: Hopfield_Network.cpp
Image_to_txt/: CMakeLists.txt
Image_to_txt/src/: Main.cpp
NeuralNetworks/: CMakeLists.txt
NeuralNetworks/headers/NN/Instruments/Functors/: Functors.h
NeuralNetworks/headers/NN/Instruments/GradDence/: Grad.h  Gradients.h
NeuralNetworks/headers/NN/Instruments/Initializers/: Init.h
NeuralNetworks/headers/NN/Instruments/Metrics/: Metrics.h
NeuralNetworks/headers/NN/Instruments/Ndarray/: Ndarray.h
NeuralNetworks/headers/NN/Instruments/Tensor/: Tensor.h
NeuralNetworks/headers/NN/SU/ANN/: ANN.h
NeuralNetworks/headers/NN/SU/ANN/Neyron/: Neuron.h
NeuralNetworks/headers/NN/SU/CNN/: CNN.h
NeuralNetworks/headers/NN/SU/CNN/Filter/: Filter.h
NeuralNetworks/headers/NN/SU/CNN/LearnFilter/: LearnFilter.h
NeuralNetworks/headers/NN/UNSU/Hopfield/: Hopfield.h
NeuralNetworks/headers/NN/UNSU/SOM/: SOM.h
NeuralNetworks/src/: ANN.h  CNN.h  ConvolutionLayer.h  Data.h  DenceLayer.h  Grad.h  Gradients.h  Init.h  Instruments.h  LearnNeyron.h  SOM.cpp
NeuralNetworks/src/ANN/LearnNeyron/: LearnNeyron.h
NeuralNetworks/src/ANN/Neyron/: Neyron.h
NeuralNetworks/src/CNN/Filter/: Filter.h  Filters.h
NeuralNetworks/src/CNN/LearnFilter/: LearnFilter.h
NeuralNetworks/src/Instruments/Functors/: Func.h  Functors.h
NeuralNetworks/src/Instruments/Initializers/: Init.h  Initializers.h
NeuralNetworks/src/Instruments/Matrix/: Matrices.h  Matrix.h
NeuralNetworks/src/Instruments/Metrics/: Metr.h
NeuralNetworks/src/Instruments/Metrix/: Metr.h  Metrics.h  Metrix.h
NeuralNetworks/src/Instruments/Tensor/: Tensor.h
NeuralNetworks/src/Instruments/Vector/: Vector.h
NeuralNetworks/src/Model/: Model.h
NeuralNetworks/src/Model/ConvolutionLayer/: ConvolutionLayer.h  ConvolutionLayers.h
NeuralNetworks/src/Model/DenceLayer/: DenceLayer.h
NeuralNetworks/src/Model/FlattenLayer/: FlattenLayer.h  FlattenLayers.h
NeuralNetworks/src/Model/Layer/: Layer.h
NeuralNetworks/src/Model/MaxpoolingLayer/: MaxpoolingLayer.h  MaxpoolingLayers.h
NeuralNetworks/src/NN/Instruments/: Instruments.h
NeuralNetworks/src/NN/Instruments/Functors/: Func.h  Functors.h
NeuralNetworks/src/NN/Instruments/GradDence/: Grad.h  Gradients.h
NeuralNetworks/src/NN/Instruments/Initializers/: Initializers.h
NeuralNetworks/src/NN/Instruments/Matrix/: Matrix.h
NeuralNetworks/src/NN/Instruments/Metrics/: Metr.h  Metrics.h
NeuralNetworks/src/NN/Instruments/Ndarray/: Ndarray.h
NeuralNetworks/src/NN/Instruments/Tensor/: Tensor.h
NeuralNetworks/src/NN/Instruments/Vector/: Vector.h
NeuralNetworks/src/NN/Preprocessing/: Data.h
NeuralNetworks/src/NN/SU/ANN/: ANN.h
NeuralNetworks/src/NN/SU/Model/: Model.h
NeuralNetworks/src/NN/UNSU/Hopfield/: Hopfield.cpp
NeuralNetworks/src/NN/UNSU/SOM/: SOM.cpp  SOM.h
NeuralNetworks/src/Preprocessing/: Data.h
NotSoSimplePerceptron/: CMakeLists.txt
NotSoSimplePerceptron/resources/: Weights.txt
NotSoSimplePerceptron/src/: StartPerceptron.cpp
NotSoSimplePerceptron_Sigm/: CMakeLists.txt
NotSoSimplePerceptron_Sigm/resources/: TeachChoose.txt  Tests.txt  Weights.txt
NotSoSimplePerceptron_Sigm/src/: StartPerceptron.cpp
P_Network_one/: CMakeLists.txt
P_Network_one/src/: P_Network_one.cpp
Perf_test/: CMakeLists.txt
Perf_test/src/: StartTest.cpp
Perf_test/src/Perf_tests_CnnLearning/: perf_test_CnnLearning.cpp
Perf_test/src/Perf_tests_Matrix/: perf_test_Matrix.cpp
Perf_test/src/Perf_tests_NeyronCnn/: perf_test_NeyronCnn.cpp
Perf_test/src/Perf_tests_Perceptron/: perf_test_Perceptron.cpp
Perf_test/src/Perf_tests_PerceptronLearning/: perf_test_PerceptronLearning.cpp
SimplePerceptron/: CMakeLists.txt
SimplePerceptron/resources/: TeachChoose.txt  Tests.txt  Weights.txt
SimplePerceptron/src/: StartPerceptron.cpp
Tests/: CMakeLists.txt
Tests/perf_tests/Test_NeyronCnn/: perf_test_NeyronCnn.cpp
Tests/src/: StartTest.cpp
Tests/src/Test_ConvolutionLayer/: test_ConvolutionLayer.cpp
Tests/src/Test_DenceLayer/: test_DenceLayer.cpp
Tests/src/Test_FlattenLayer/: test_FlattenLayer.cpp
Tests/src/Test_Hopfield/: test_Hopfield.cpp
Tests/src/Test_LearnFilter/: test_LearnFilter.cpp
Tests/src/Test_LearnNeuron/: test_LearnNeuron.cpp
Tests/src/Test_LearnNeyron/: test_LearnNeyron.cpp
Tests/src/Test_MaxpoolingLayer/: test_MaxpoolingLayer.cpp
Tests/src/Test_Ndarray/: test_Ndarray.cpp
Tests/src/Test_NeyronCnn/: NeyronTest.txt  perf_test_NeyronCnn.cpp  test_NeyronCnn.cpp
Tests/src/Test_Preprocessing/: test_Preprocessing.cpp
Tests/src/Test_SOM/: test_som.cpp
Tests/src/Test_Tensor/: test_Tensor.cpp
Tests/src/Test_Weights/: test_Weights.cpp
Tests/src/Tests_CnnLearning/: CNNLearningTest.txt  test_CnnLearning.cpp
Tests/src/Tests_Filter/: FilterTest.txt  perf_test_Filter.cpp  test_Filter.cpp
Tests/src/Tests_Matrix/: perf_test_Matrix.cpp  test_Matrix.cpp
Tests/src/Tests_Neuron/: test_Neuron.cpp
Tests/src/Tests_Neyron/: test_Neyron.cpp
Tests/src/Tests_Perceptron/: test_Perceptron.cpp
Tests/src/Tests_PerceptronLearning/: perf_test_PerceptronLearning.cpp  test_PerceptronLearning.cpp
(+79 files in other folders)
